Fixed total user, It was incremented by 1
Also made few data changes to confirm the verification.

--- a/1 Refactor Duplicate Loops to Single/MonitorLogIn.html
+++ b/1 Refactor Duplicate Loops to Single/MonitorLogIn.html
@@ -34,7 +34,7 @@
     <tr>
       <td>Total</td>
       <td id="totalCount"></td>
-      <td id="totalemail"></td>
+      <td id="totalUser"></td>
     </tr>
     <tr>
       <td>1 month ago</td>
