Applied filter on result to get today's login cnt

--- a/1 Refactor Duplicate Loops to Single/MonitorLogIn.html
+++ b/1 Refactor Duplicate Loops to Single/MonitorLogIn.html
@@ -26,6 +26,11 @@
       <td id="todaytotal"></td>
       <td></td>
     </tr>
+     <tr>
+      <td>New Today</td>
+      <td id="Newtodaytotal"></td>
+      <td></td>
+    </tr>
     <tr>
       <td>This month</td>
       <td id="monthlytotal"></td>
