Changed today's count with new algorithm of filter
If you have noticed the previous commit was tiny step before making the change. 
Also the orginial implimentation is still in place and can be verfied with multiple LoginData. 
This approach of code changes keeps the confidence high. Next step will be to remove the old algorithm.

--- a/1 Refactor Duplicate Loops to Single/MonitorLogIn.html
+++ b/1 Refactor Duplicate Loops to Single/MonitorLogIn.html
@@ -24,7 +24,7 @@
     <tr>
       <td>Today</td>
       <td id="todaytotal"></td>
-      <td></td>
+      <td id="todaytotalUser"></td>
     </tr>
      <tr>
       <td>New Today</td>
