Applied the filter algo to this month -Fixed a bug
Surprisingly cleaning code often tend to fix bugs. I think it is because we are more clear with a cleaner solution. 
Still both new and old algorithm is together and it helps to verify.

--- a/1 Refactor Duplicate Loops to Single/MonitorLogIn.html
+++ b/1 Refactor Duplicate Loops to Single/MonitorLogIn.html
@@ -32,6 +32,11 @@
       <td id="monthlytotalUser"></td>
     </tr>
     <tr>
+      <td>New This month</td>
+      <td id="Newmonthlytotal"></td>
+      <td id="NewthismonthtotalUser"></td>
+    </tr>
+    <tr>
       <td>Total</td>
       <td id="totalCount"></td>
       <td id="totalUser"></td>
