Applied New filter algo for last 2 month's counts
The process is repeated for last 2 month Login and unique user count.

--- a/1 Refactor Duplicate Loops to Single/MonitorLogIn.html
+++ b/1 Refactor Duplicate Loops to Single/MonitorLogIn.html
@@ -46,6 +46,11 @@
       <td id="last2monthtotal"></td>
       <td id="last2monthtotalUser"></td>
     </tr>
+    <tr>
+      <td>New 2 month ago</td>
+      <td id="Newlast2monthtotal"></td>
+      <td id="Newlast2monthtotalUser"></td>
+    </tr>
   </tbody>
   </table>
 
