Changed the displayed based on MonthWiseReport
This makes it easy to fix bugs or make any changes in algorithm.

--- a/1 Refactor Duplicate Loops to Single/MonitorLogIn.html
+++ b/1 Refactor Duplicate Loops to Single/MonitorLogIn.html
@@ -20,7 +20,7 @@
         <th>Unique Users</th>
       </tr>
     </thead>
-  <tbody>
+  <tbody id="MonitorSummary">
     <tr>
       <td>Today</td>
       <td id="todaytotal"></td>
